[workspace]

members = [
    # Downloads latest BCH and XEC versions
    "bitcoinsuite-bitcoind",
    # Downloads and builds bchd executables
    "bitcoinsuite-bchd-grpc",

    "bitcoinsuite-core",
    "bitcoinsuite-ecc",
    "bitcoinsuite-ecc-secp256k1",
    "bitcoinsuite-slp",
    "bitcoinsuite-test-utils",
    "bitcoinsuite-test-utils-blockchain",
]
