[workspace]

members = [
    # Downloads latest BCH and XEC versions
    "bitcoinsuite-bitcoind",
    # Downloads and builds bchd executables
    "bitcoinsuite-bchd-grpc",

    "bitcoinsuite-core",
    "bitcoinsuite-ecc-secp256k1",
    "bitcoinsuite-error",
    "bitcoinsuite-error-derive",
    "bitcoinsuite-error-report",
    "bitcoinsuite-error-warp",
    "bitcoinsuite-slp",
    "bitcoinsuite-test-utils",
    "bitcoinsuite-test-utils-blockchain",
]
