[package]
name = "bitcoinsuite-bchd-grpc"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
# Bitcoin tools
bitcoinsuite-core = { path = "../bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../bitcoinsuite-slp" }
async-trait = "0.1.50"

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# For test instance datadir
tempdir = "0.3"
bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }

# GRPC
tonic = { version = "0.5", features = ["transport", "tls"] }
prost = "0.8"
tokio-rustls = { version = "*", features = ["dangerous_configuration"] }

[build-dependencies]
tonic-build = "0.5"
