[package]
name = "bitcoinsuite-bchd-grpc"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.14", features = ["full"] }
futures = "0.3"

# Bitcoin tools
bitcoinsuite-core = { path = "../bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../bitcoinsuite-slp" }
async-trait = "0.1.50"

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# For test instance datadir
tempdir = "0.3"
bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }

# GRPC
tonic = { version = "0.6", features = ["transport", "tls"] }
prost = "0.9"
rustls = { version = "0.19.1", features = ["dangerous_configuration"] }
webpki = "0.21"

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
bitcoinsuite-test-utils-blockchain = { path = "../bitcoinsuite-test-utils-blockchain" }

bitcoinsuite-ecc-secp256k1 = { path = "../bitcoinsuite-ecc-secp256k1" }
pretty_assertions = "1.0"
