[package]
name = "bitcoinsuite-bitcoind"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
# Bitcoin stuff
bitcoinsuite-core = { path = "../bitcoinsuite-core" }

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# For test instance datadir
tempdir = "0.3"

# For the JSON RPC
json = "0.12"

bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }
