[package]
name = "bitcoinsuite-bitcoind"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2021"

[dependencies]
# Bitcoin stuff
bitcoinsuite-core = { path = "../bitcoinsuite-core" }

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# Hex en-/decoding
hex = "0.4"

# Config
serde = { version = "1.0", features = ["derive"] }

# For test instance datadir
tempdir = "0.3"

# For the JSON RPC
reqwest = "0.11"
json = "0.12"

bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }

[dev-dependencies]
# Async
tokio = { version = "1.14", features = ["full"] }
