[package]
name = "bitcoinsuite-core"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2021"

[dependencies]
# Error handling
thiserror = "1.0"

# Byte/string libs
bytes = { version = "1.0", features = ["serde"] }
hex = "0.4"
hex-literal = "0.3"

# Hashing
digest = "0.10"
sha-1 = "0.10"
ripemd = "0.1"
sha2 = "0.10"

serde = { version = "1.0", features = ["derive"] }

# Parsing base58
bs58 = "0.4"

# Keeping secret keys hidden
secrecy = "0.8"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.14", features = ["full"] }
bitcoinsuite-test-utils-blockchain = { path = "../bitcoinsuite-test-utils-blockchain" }
bitcoinsuite-ecc-secp256k1 = { path = "../bitcoinsuite-ecc-secp256k1" }
