[package]
name = "bitcoinsuite-ecc-secp256k1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoinsuite-ecc = { path = "../bitcoinsuite-ecc" }
bitcoinsuite-core = { path = "../bitcoinsuite-core" }

secp256k1 = "0.20"

[dev-dependencies]
hex-literal = "0.3"
