[package]
name = "bitcoinsuite-error-report"
version = "0.1.0"
edition = "2018"

[dependencies]
# Error handling
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# bitcoin/ errors
bitcoinsuite-bchd-grpc = { path = "../bitcoinsuite-bchd-grpc" }
bitcoinsuite-bitcoind = { path = "../bitcoinsuite-bitcoind" }

# util/ errors
bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }
