[package]
name = "bitcoinsuite-slp"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base crate
bitcoinsuite-core = { path = "../bitcoinsuite-core" }

# Error handling 
thiserror = "1.0"
anyhow = "1.0"

async-trait = "0.1.50"

# Serialization
serde = { version = "1.0", features = ["derive"] }
