[package]
name = "bitcoinsuite-test-utils-blockchain"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
# Error handling
bitcoinsuite-error = { path = "../bitcoinsuite-error" }

# Async
tokio = { version = "1.12", features = ["full"] }

# Bitcoin stuff
bitcoinsuite-core = { path = "../bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../bitcoinsuite-slp" }

# Nodes
bitcoinsuite-bitcoind = { path = "../bitcoinsuite-bitcoind" }
bitcoinsuite-bchd-grpc = { path = "../bitcoinsuite-bchd-grpc" }

# Test utils
bitcoinsuite-test-utils = { path = "../bitcoinsuite-test-utils" }
